# Proyectos_Universidad

./: .gitignore
practica-fundamentos-ingenieria-del-software/construcción/: README.md  pom.xml
practica-programacion-orientada-objetos/: pom.xml
practica-programación-hardware-reconfigurable/: PFA_PHR_25_M01.xpr
practica-redes-avanzadas/: dosServers  hecho.txt  package-lock.json  package.json  start.sh
practica-redes-avanzadas/middleware1/: README.md  app.js  description_sensores_mid1.xml  package-lock.json  package.json
practica-redes-avanzadas/middleware2/: app.js  description_sensores_mid2.xml  package-lock.json  package.json
practica-redes-avanzadas/mqtt-cratedb-listener/: crate.js  description_mqtt_cratedb.xml  description_servicio_personal.xml  mqtt-cratedb-listener.js  package-lock.json  servicio-medias.js
practica-redes-avanzadas/plantilla_GET/: plantilla_GET.ino
practica-redes-avanzadas/plantilla_POST/: plantilla_POST.ino
practica-redes-avanzadas/socket/: aaaa.txt
practica-sistemas-basados-en-computador/BAPAI/: .cproject  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
practica-sistemas-basados-en-computador/BAPAI/components/i2cdev/: .cproject  CMakeLists.txt
practica-sistemas-empotrados/: Información del proyecto.txt
practica-sistemas-empotrados/Proyecto_SMA/: adc_lib.c  adc_lib.h  comm_lib.c  comm_lib.h  i2c_lib.c  i2c_lib.h  main.c  pwm_lib.c  pwm_lib.h  spi_soft_lib.c  spi_soft_lib.h  system_manager.c  system_manager.h
practica-sistemas-inteligentes/: README.md  main.py
practica-sistemas-inteligentes/dataheets/: gen01.csv  (+3 more)
(+293 files in other folders)
